improve: input zoom issue on ios

--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+input, select, textarea { 
+    font-size: max(16px, 1em); 
+}
+
 body {
     background-color: var(--color-bg);
 }
